--- a/index.html
+++ b/index.html
@@ -4,16 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab 01</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-07P8ET2Y4Q"></script>
+    <!-- Loads Google’s Global Site Tag library (gtag.js) -->
+    <!-- async means: page keeps loading, analytics loads in bg (doesn’t block rendering)-->
+    <script src="/js/ga.js"></script>
 </head>
 <body>
-    <h1>My First Web Page</h1>
-    <p>Welcome to my first web page! This page is created as part of my web project lab.</p>
-    <h2>Using Text Formatting</h2>
-    <p>This is a <strong>bold</strong> text and this is an <em>italic</em> text.</p>
-    <p> This is a <strong><em>bold and italic</em></strong></p>
-    <h2>Summary</h2>
-    <p>Used <strong>headings</strong> (h1, h2).</p><br>
-    <p>Added paragraphs (`p`).</p><br>
-    <p>Styled text using <strong>bold</strong> and <em>italic</em>.</p><br>
+    <h1>Will put my Neocities img folders here</h1>
+    <p></p>
+    <h2>I'm running out of my Neocities site's storage</h2>
+    <p></p>
+    <strong></strong>
+    <em></em>
+    <p></p>
+    <strong><em></em></strong>
+    <h2>Will put webring widgets soon</h2>
+    <p></p><br>
+    <strong></strong>
+    <p></p><br>
+    <p></p><br>
+    <strong></strong>
+    <em></em>
 </body>
 </html>
